style.css
*
{
    margin: 0px;
    padding: 0px;

    border-style: solid;
    border-width: 1px;
    border-color: black;

    font-family: monospace;
    font-size: xx-large;
    text-align: center;
}



#centre
{
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100vh;
}

#calculatorContainer
{
    flex-basis: 400px;
    display: flex;
    flex-direction: column;
    flex-shrink: 1;
}

#calculatorDisplay
{  
   flex-basis: 20vh; 
   flex-grow: 1;
   flex-shrink: 1;
}

#calculatorButtons
{
    display: flex;
    justify-content: stretch;
    align-items: stretch;
    flex-basis: 60vh;
    flex-grow: 1;
    flex-shrink: 1;
}

.buttonColumn
{
    display: flex;
    flex-direction: column;
    justify-content: stretch;
    align-items: stretch;
}

.buttonColumn, .calculatorButton
{
    flex-grow: 1;
}

